--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<html> [] </html>
+<html>
+  <head>
+    <style>
+      
+    </style>
+  
+  </head>
+  
+  <body>
+    Hammer Chen's TWINE game!!!.
+    We are going to save homeless in the city Rochester.
+   
+    <br><br>
+    <a href="https://hammerchen1.github.io/hamm/images/Chen_2.gif">Let's goooooooo!</a>
+    <br><br>
+    <img src="https://hammerchen1.github.io/hamm/images/Chen_2.gif">
+  </body>
+  
+</html>
