--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
   <head>
     <style>
-      
+      body {
+background-color: LightGray;
+color: purple;
+font-size: 50px;
+font-family: Papyrus, Helvetica, sans-serif;
+}
     </style>
   
   </head>
@@ -12,8 +17,9 @@
    
     <br><br>
     <a href="https://hammerchen1.github.io/hamm/images/Chen_2.gif">Let's goooooooo!</a>
-    <br><br>
+    <br>
     <img src="https://hammerchen1.github.io/hamm/images/Chen_2.gif">
   </body>
   
 </html>
+
