--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 background-color: LightGray;
 color: purple;
 font-size: 50px;
-font-family: Papyrus, Helvetica, sans-serif;
+font-family: Papyrus, Helvetica, serif;
 }
     </style>
   
