--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ font-family: Papyrus, Helvetica, serif;
     We are going to save homeless in the city Rochester.
    
     <br><br>
-    <a href="https://hammerchen1.github.io/hamm/images/Chen_2.gif">Let's goooooooo!</a>
+    <a href="https://hammerchen1.github.io/hamm/Save the HOMELESS.html">Let's goooooooo!</a>
     <br>
     <img src="https://hammerchen1.github.io/hamm/images/Chen_2.gif">
   </body>
